feat(EREF-49) : Replace domibus ws plugin with custom ws client and some fixes (#53)
* feat(EREF-49) : Replace domibus ws plugin with custom ws client

* EREF-49:added some unit tests

* fix build issue

* added some tests and exclusions for sonar

* added exclusion for sonat=r

* fix null pointer when logging fti021

* fixed request status not updated for remote gate

* fix(EFTI-982): update control instantly after gate response to avoid updating during GET operation

* EFTI-984 : fixed id of reponding component type when it is ca aap

* EREF-49 ; replace domibus connector and some fixes

* used dependencymanagement to avoid version difference across modules